# star-torrent

./: CHANGELOG  Cargo.toml  README.md  justfile  rustfmt.toml
crates/bedit-cloudburst/: CHANGELOG.md  Cargo.toml
crates/bedit-cloudburst/src/: crypto.rs  fileattributes.rs  files.rs  hex.rs  hexadecimal.rs  info.rs  lib.rs  pieces.rs  signature.rs  torrent.rs  uriwrapper.rs  urlwrapper.rs
crates/bedit-cloudburst/src/crypto/: md5.rs  sha1.rs  sha256.rs  signature.rs
crates/bedit-cloudburst/src/hexadecimal/: hexbytes.rs
crates/bedit-cloudburst/tests/: example_files.rs
crates/bedit-settings/: Cargo.toml
crates/bedit-settings/src/: deluge.rs  lib.rs  transmission.rs
crates/bedit-settings/src/transmission/: settings.rs
crates/bedit-torrent/: CHANGELOG.md  Cargo.toml  README.md
crates/bedit-torrent/src/: error.rs  fileattributes.rs  files.rs  info.rs  lib.rs  signature.rs  torrent.rs  torrent_files.rs  torrent_sign.rs
crates/bedit-torrent/tests/: example_files.rs  tests_tmp.rs
crates/star-bert/: CHANGELOG.md  Cargo.toml  README.md
crates/star-bert/fuzz/: Cargo.toml
crates/star-bert/fuzz/fuzz_targets/: fuzz_string.rs
crates/star-bert/src/: bencode_error.rs  lib.rs  parser.rs
crates/star-bert/src/parser/: bytes.rs  integer.rs  parser_error.rs
crates/star-cloudburst/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/star-cloudburst/src/: fileattributes.rs  files.rs  pieces.rs
crates/star-cloudburst/src/crypto/: md5.rs  sha256.rs
crates/star-cloudburst/src/hexadecimal/: hexbytes.rs  nibbles.rs
crates/star-cloudburst/src/lib/: crypto.rs  files.rs  info.rs  lib.rs  metainfo.rs  pieces.rs  torrent.rs  uri.rs
crates/star-cloudburst/src/lib/crypto/: calculateinfohash.rs  md5.rs  sha1.rs  sha2.rs  sha256.rs
crates/star-cloudburst/src/lib/files/: fileattributes.rs  filedisplayinfo.rs  filetree.rs  flatfile.rs  flatfiles.rs
crates/star-cloudburst/src/lib/hexadecimal/: hexbytes.rs
crates/star-cloudburst/src/lib/metainfo/: hybrid.rs  infohash.rs  metav1.rs  metav2.rs  serde_bool_int.rs
crates/star-cloudburst/src/lib/uri/: node.rs  uriwrapper.rs
crates/star-cloudburst/tests/: example_files.rs
src/: main.rs
