[package]
name = "star-torrent"
description = "Star torrent is a BitTorrent client."
authors = ["Joshua Megnauth <>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/joshuamegnauth54/star-torrent/"
license = "MIT"
keywords = ["torrent", "parse", "cross-platform", "gui", "p2p"]
categories = ["config", "parsing"]

[profile.release]
strip = true
lto = true

[workspace]
members = ["crates/*"]

[features]
default = ["gui", "logging"]
logging = ["dep:log", "dep:pretty_env_logger"]
gui = ["iced"]

[dependencies]
star-cloudburst = { path = "crates/star-cloudburst" }
iced = { version = "0.4.2", optional = true }
log = { version = "0.4", optional = true }
pretty_env_logger = { version = "0.4", optional = true }
