[package]
name = "bedit-cloudburst"
description = "Helper structs for serializing and deserializing torrents for benitor."
authors = ["Joshua Megnauth <>"]
version = "0.6.0"
edition = "2021"
repository = "https://github.com/joshuamegnauth54/benitor/"
license = "MIT"
keywords = ["torrent", "parse", "cross-platform"]
categories = ["config", "parsing"]

[[bin]]
name = "cloudburst"
required-features = ["binary"]
path = "src/bin/main.rs"
test = false
bench = false

[lib]
name = "bedit_cloudburst"
path = "src/lib.rs"

[features]
binary = ["dep:argh", "dep:pretty_env_logger", "dep:color-eyre", "dep:crossterm", "dep:tui"]

[dependencies]
argh = { version = "0.1.9", optional = true }
arrayvec = { version = "0.7.2", features = ["serde"] }
color-eyre = { version = "0.6", default-features = false, optional = true }
crossterm = { version = "0.25", optional = true }
either = { version = "1.8", features = ["serde"] }
http = "0.2.8"
itertools = "0.10.5"
log = "0.4"
md-5 = "0.10.5"
pretty_env_logger = { version = "0.4", optional = true }
serde = { version = "1.0.147", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.7"
serde_with = "2.0.1"
tui = { version = "0.19", features = ["crossterm"], optional = true }

[dev-dependencies]
serde_test = "1.0.147"
