[package]
name = "bedit-settings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
log = "0.4"
dirs = "4.0.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_bencode = "0.2.3"
serde_json = "1.0.82"
thiserror = "1.0"
