[package]
name = "bedit-settings"
authors = ["Joshua Megnauth <>"]
description = "Torrent client settings deserializer for benitor."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/joshuamegnauth54/benitor/"
license = "MIT"
keywords = ["torrent", "parse", "cross-platform"]
categories = ["config", "parsing"]
exclude = ["target/debug/*"]

[dependencies]
cfg-if = "1.0"
dirs = "4.0.0"
log = "0.4"
serde = { version = "1.0.140", features = ["derive"] }
serde_bencode = "0.2.3"
serde_json = "1.0.82"
thiserror = "1.0"
