[package]
name = "bedit-torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = { version = "1.7", features = ["serde"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.6"
log = "0.4"
thiserror = "1.0"
