[package]
name = "bedit-torrent"
description = "Helper structs for serializing and deserializing torrents for benitor."
authors = ["Joshua Megnauth <>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/joshuamegnauth54/benitor/"
license = "MIT"
keywords = ["torrent", "parse", "cross-platform"]
categories = ["config", "parsing"]

[dependencies]
either = { version = "1.7", features = ["serde"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.6"
log = "0.4"
thiserror = "1.0"
unicode-segmentation = "1.9.0"
