[package]
name = "star-bert"
description = "BERT Encodes Rusty Torrents"
authors = ["Joshua Megnauth <>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/joshuamegnauth54/star-torrent"
license = "MIT"
keywords = ["bencode", "deserialize", "parse", "serialize", "torrent"]
categories = ["encoding", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["serde"]
bigint = ["dep:num-bigint"]
serde = ["dep:serde", "dep:serde_bytes"]

[dependencies]
nom = "7.1.3"
num-bigint = { version = "0.4", optional = true }
num-integer = "0.1.45"
serde = { version = "1.0.158", optional = true }
serde_bytes = { version = "0.11.9", optional = true }
thiserror = "1.0"
